Use of complex in the extensions
Signed-off-by: JB-H <jbheyberger@gmail.com>